@@ -1,5 +1,5 @@
-45024af516f05c3b37d64b791893f71f *DESCRIPTION
-0f2025b891c0ed35a83110b126e9f30b *NAMESPACE
+bd547ca6d79370a8ea3c77b876319d90 *DESCRIPTION
+2ac8698b8109b3fa4e41d7336d15ffff *NAMESPACE
 4d120d4e043d27196e4def717d0a9167 *R/attractorsToLaTeX.R
 0e037f01fa88a832cb43d3a9d5e9f5dd *R/binarizeTimeSeries.R
 ec2c323ef07745ec7b89339aa5a4433c *R/chooseNetwork.R
@@ -17,18 +17,18 @@ cc663c2b39dc50cd45bbb83d7cd36d44 *R/getPathToAttractor.R
 a45f67785e1846f8482c9ff10debd95c *R/getTransitionProbabilities.R
 d31c9950c1a42c23eb5585c23e98bb25 *R/getTransitionTable.R
 bcb05028ee3a7409ade10f1e59324997 *R/helpers.R
-0b554d0d7b6313eb697fcc1530be7984 *R/loadBioTapestry.R
+426b17cc03f8f6bd81f999a31a9f99de *R/loadBioTapestry.R
 015fccf466d7871a8c0d4ad04ea8e1f9 *R/loadNetwork.R
-3eca4987b3bf79a31ee4f12d01489c98 *R/loadSBML.R
+fce420da0cc052583b166457e0792350 *R/loadSBML.R
 817f7c8476aa6b32443be62885e3c72d *R/markovSimulation.R
 af7f8cfe863d3d66809dc64a47b407f6 *R/parseBooleanFunction.R
 75a4ff7284740122216a79cd7f9508e1 *R/perturbNetwork.R
 6e8d3d79095844cf1fb6cb7c75750cfe *R/perturbTrajectories.R
-e993c36583b7d675d826d5fa0ae49a28 *R/plotAttractors.R
-57e5eb14a16007b7fd74e9d7f90a5bb5 *R/plotNetworkWiring.R
-a04b208788b419584a8af04ec41c6b6c *R/plotPBNTransitions.R
-11c604d68aa2e8711a0d27e8fe1e5a21 *R/plotSequence.R
-15e0adf8e87311b93cbc33bbce3775bb *R/plotStateGraph.R
+fcd168fb6cf77be64c52ad5d8d471717 *R/plotAttractors.R
+20fd67145509cae5e9701fcfa93e210c *R/plotNetworkWiring.R
+9f64811ec997a7aa2fc262725ae6f7e5 *R/plotPBNTransitions.R
+3b126c2b645f8ee9ad012b6fb1efaa84 *R/plotSequence.R
+1a4c7472949dcd09fe8c8db854233825 *R/plotStateGraph.R
 1d3e5b86636a5b54035d7062285e34e4 *R/print.AttractorInfo.R
 bd5b5182c9a4321e0051be7f40bcbf6f *R/print.BooleanNetwork.R
 09ac08c8cb2ef098c96a86de93e5ad7c *R/print.BooleanStateInfo.R
@@ -45,7 +45,7 @@ bf8262876ef7f928d49783d754f48d8f *R/sequenceToLaTeX.R
 28588b831db57224a25a217f5b7c02b4 *R/simulateSymbolicModel.R
 a778a7e3bf2926f30fcbe2860bcbaeff *R/stateTransition.R
 bcc8e5efc6d7859ebb74a9ec935bccb1 *R/symbolicToTruthTable.R
-8218f0918b51fcda149b6e05edc5129b *R/testNetworkProperties.R
+42daa52bc14fc6918004e35203e07907 *R/testNetworkProperties.R
 568159a3609b108c45ba2c39728fa6ce *R/toPajek.R
 47bc51ada1eefa53c11e0171a589bc8b *R/toSBML.R
 6837a7eacb84d76090b898ab2727fc3a *R/truthTableToSymbolic.R
@@ -56,13 +56,13 @@ bcc8e5efc6d7859ebb74a9ec935bccb1 *R/symbolicToTruthTable.R
 d58578f1cc7da58378f1617a6d8bb021 *data/igf.rda
 8919de127f7ee2391900468a36c5dcd4 *data/yeastTimeSeries.rda
 62409980eecaca8e52f1d495f499d6bd *inst/CITATION
-fe15fc818d7d11ff275421c57f271130 *inst/NEWS.Rd
+f40e99908372998ba08a747e827d83bf *inst/NEWS.Rd
 cda72cec7898c9ad77c0cce064efb747 *inst/doc/BoolNet_package_vignette.R
 49c259005afa7cf046ffb9c9e763fc83 *inst/doc/BoolNet_package_vignette.Snw
-6692dabf5a3e0d8680982a47ac066920 *inst/doc/BoolNet_package_vignette.pdf
+ab02ae582727c0f2ce23647c82cf4735 *inst/doc/BoolNet_package_vignette.pdf
 fcb0ddc4a26eb5062f05b55032e5b151 *inst/doc/cellcycle.txt
 27bccf40991bbe762bc274cbd7874f40 *inst/doc/example.btp
-33288e53c823562880d1940fa09740ac *man/BoolNet-package.Rd
+64157206bf2b17b56cf1b1521fb5d3b3 *man/BoolNet-package.Rd
 8643de64a151c82b1b3c178d689aec0c *man/attractorsToLaTeX.Rd
 3461bfd43dd57a88d01d83df611f95c0 *man/binarizeTimeSeries.Rd
 3623b2fe85476af5336cf7e220c1d60e *man/cellcycle.Rd
@@ -116,7 +116,7 @@ a51a8c64ec6b1663297b76263d42dc09 *src/boolean_network.c
 8b8f36f3817e3b52ffc0025ccafa22da *src/probabilistic_boolean_network.c
 686e443cfcfa3f597ea866bc25c356e7 *src/random.h
 58be262aa256be87d8d8cf3cf63abfb3 *src/reconstruct_network.c
-739795bcbb420feb16e2814ae20bb841 *src/symbolic_simulator.c
+f15b38ef61b81e1653d9265ff6676a93 *src/symbolic_simulator.c
 460b4e88a7af5ba2c60231ca9f3644c8 *src/uthash.h
 49c259005afa7cf046ffb9c9e763fc83 *vignettes/BoolNet_package_vignette.Snw
 779ac458f99fd3375a6f11379e8aa7b4 *vignettes/BoolNet_package_vignette.bib
