@@ -9,8 +9,8 @@
 \tabular{ll}{
 Package: \tab BoolNet\cr
 Type: \tab Package\cr
-Version: \tab 2.0\cr
-Date: \tab 2014-07-16\cr
+Version: \tab 2.0.1\cr
+Date: \tab 2014-08-26\cr
 License: \tab Artistic-2.0\cr
 LazyLoad: \tab yes\cr
 }
